test_output/test_output_2.txt
============================= test session starts =============================
platform win32 -- Python 3.12.10, pytest-9.0.2, pluggy-1.6.0 -- C:\dev\GUTTERS\.venv\Scripts\python.exe
cachedir: .pytest_cache
rootdir: C:\dev\GUTTERS
configfile: pyproject.toml
plugins: anyio-4.12.1, Faker-37.3.0, langsmith-0.6.4, asyncio-1.3.0, mock-3.14.1
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collecting ... collected 4 items

tests/modules/intelligence/test_generative_ui.py::test_models_serialization PASSED [ 25%]
tests/modules/intelligence/test_generative_ui.py::test_generator_multi_slider PASSED [ 50%]
tests/modules/intelligence/test_generative_ui.py::test_query_engine_integration PASSED [ 75%]
tests/modules/intelligence/test_generative_ui.py::test_api_component_submission FAILED [100%]

================================== FAILURES ===================================
________________________ test_api_component_submission ________________________

seeded_user = 5
db = <sqlalchemy.ext.asyncio.session.AsyncSession object at 0x000001B9ADA1DF10>

    @pytest.mark.asyncio
    async def test_api_component_submission(seeded_user, db):
        """
        Test submitting a component response via API logic directly.
        (We verify the logic inside the endpoint handler pattern).
        """
        # Simulate API handler logic
        from src.app.api.v1.chat import submit_component_response
    
        # Create a component response
        comp_id = str(uuid.uuid4())
        payload = ComponentResponse(
            component_id=comp_id,
            component_type=ComponentType.MULTI_SLIDER,
            slider_values={"mood": 5, "energy": 3, "anxiety": 8},
            interaction_time_ms=1500,
        )
    
        # Call handler (simulated)
        # We need a user object matching the seeded_user ID
        from src.app.models.user import User
    
>       user = User(id=seeded_user, email="test@example.com", is_active=True)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

tests\modules\intelligence\test_generative_ui.py:127: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
<string>:4: in __init__
    ???
.venv\Lib\site-packages\sqlalchemy\orm\state.py:596: in _initialize_instance
    with util.safe_reraise():
         ^^^^^^^^^^^^^^^^^^^
.venv\Lib\site-packages\sqlalchemy\util\langhelpers.py:224: in __exit__
    raise exc_value.with_traceback(exc_tb)
.venv\Lib\site-packages\sqlalchemy\orm\state.py:594: in _initialize_instance
    manager.original_init(*mixed[1:], **kwargs)
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _

self = <src.app.models.user.User object at 0x000001B9ADA1FA70>
kwargs = {'email': 'test@example.com', 'id': 5, 'is_active': True}
cls_ = <class 'src.app.models.user.User'>, k = 'is_active'

    def _declarative_constructor(self: Any, **kwargs: Any) -> None:
        """A simple constructor that allows initialization from kwargs.
    
        Sets attributes on the constructed instance using the names and
        values in ``kwargs``.
    
        Only keys that are present as
        attributes of the instance's class are allowed. These could be,
        for example, any mapped columns or relationships.
        """
        cls_ = type(self)
        for k in kwargs:
            if not hasattr(cls_, k):
>               raise TypeError(
                    "%r is an invalid keyword argument for %s" % (k, cls_.__name__)
                )
E               TypeError: 'is_active' is an invalid keyword argument for User

.venv\Lib\site-packages\sqlalchemy\orm\decl_base.py:2179: TypeError
============================== warnings summary ===============================
src\app\modules\intelligence\synthesis\schemas.py:21
  C:\dev\GUTTERS\src\app\modules\intelligence\synthesis\schemas.py:21: PydanticDeprecatedSince20: Support for class-based `config` is deprecated, use ConfigDict instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
    class UnifiedProfile(BaseModel):

src\app\modules\intelligence\query\schemas.py:9
  C:\dev\GUTTERS\src\app\modules\intelligence\query\schemas.py:9: PydanticDeprecatedSince20: Support for class-based `config` is deprecated, use ConfigDict instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
    class QueryRequest(BaseModel):

src\app\modules\intelligence\hypothesis\models.py:32
  C:\dev\GUTTERS\src\app\modules\intelligence\hypothesis\models.py:32: PydanticDeprecatedSince20: Support for class-based `config` is deprecated, use ConfigDict instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
    class Hypothesis(BaseModel):

tests/modules/intelligence/test_generative_ui.py::test_query_engine_integration
tests/modules/intelligence/test_generative_ui.py::test_api_component_submission
  C:\dev\GUTTERS\tests\fixtures\seed_data.py:43: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    start_date = datetime.utcnow() - timedelta(days=days)

tests/modules/intelligence/test_generative_ui.py: 123 warnings
  C:\dev\GUTTERS\tests\fixtures\seed_data.py:47: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    while current_date < datetime.utcnow():

tests/modules/intelligence/test_generative_ui.py::test_query_engine_integration
tests/modules/intelligence/test_generative_ui.py::test_api_component_submission
  C:\dev\GUTTERS\tests\fixtures\seed_data.py:147: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    "detected_at": datetime.utcnow().isoformat()

tests/modules/intelligence/test_generative_ui.py::test_query_engine_integration
tests/modules/intelligence/test_generative_ui.py::test_api_component_submission
  C:\dev\GUTTERS\tests\fixtures\seed_data.py:157: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    "detected_at": datetime.utcnow().isoformat()

tests/modules/intelligence/test_generative_ui.py::test_query_engine_integration
tests/modules/intelligence/test_generative_ui.py::test_api_component_submission
  C:\dev\GUTTERS\tests\fixtures\seed_data.py:167: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    "detected_at": datetime.utcnow().isoformat()

tests/modules/intelligence/test_generative_ui.py::test_query_engine_integration
tests/modules/intelligence/test_generative_ui.py::test_api_component_submission
  C:\dev\GUTTERS\tests\fixtures\seed_data.py:176: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    "detected_at": datetime.utcnow().isoformat()

tests/modules/intelligence/test_generative_ui.py::test_query_engine_integration
tests/modules/intelligence/test_generative_ui.py::test_api_component_submission
  C:\dev\GUTTERS\tests\fixtures\seed_data.py:186: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    "detected_at": datetime.utcnow().isoformat()

tests/modules/intelligence/test_generative_ui.py::test_query_engine_integration
tests/modules/intelligence/test_generative_ui.py::test_api_component_submission
  C:\dev\GUTTERS\tests\fixtures\seed_data.py:205: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    start_date = datetime.utcnow() - timedelta(days=days)

tests/modules/intelligence/test_generative_ui.py: 123 warnings
  C:\dev\GUTTERS\tests\fixtures\seed_data.py:209: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    while current_date < datetime.utcnow():

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ===========================
FAILED tests/modules/intelligence/test_generative_ui.py::test_api_component_submission
================= 1 failed, 3 passed, 263 warnings in 21.18s ==================
